--- a/styles/images.css
+++ b/styles/images.css
@@ -6,7 +6,6 @@
 
 .slider__images {
   background-color: #e6f1f8;
-  width: 17%;
   padding: 1.5em;
   border-radius: 11px;
 }
@@ -17,7 +16,11 @@
 
 .slider__images--text, .slider__images--title  {
   font-style: italic;
-  font-weight: 500;
+  font-weight: 600;
+}
+
+.slider__images--text {
+  text-align: justify;
 }
 
 .slider__images--title p {
@@ -61,7 +64,6 @@
 }
 
 .caousel__menu--quotes {
-  position: fixed;
   text-align: center;
   font-weight: bold;
   font-style: italic;
@@ -88,5 +90,9 @@
   .images--group p {
     margin-top: 0.2rem;
     text-align: center;
+  }
+
+  .caousel__menu {
+    display: none;
   }
 }
