--- a/styles/nav-bar.css
+++ b/styles/nav-bar.css
@@ -83,11 +83,14 @@
   color: #0072BC;
 }
 
+.no-scroll {
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
 /* Small devices (landscape phones, 576px and up) */
 @media (max-width: 575.98px) {
   .nav-bar__content {
     background-color: #FFFFFF;
-    height: 100vh;
   }
 
   .nav-bar__content li {
