--- a/styles/texts.css
+++ b/styles/texts.css
@@ -16,7 +16,7 @@
 .subtitle-text {
   color: #0072BC;
   font-style: italic;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 1.3rem;
 }
 
